# s2n-tls

./: .clang-format  .codecov.yml  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .ninja_deps  .ninja_log  .pep8  .travis.yml  32-build.sh  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  LICENSE  Makefile  README.md  SECURITY.md  VERSIONING.rst  build.ninja  clippy.toml  cmake_install.cmake  codecov.yml  cork-uncork.cry  cork-uncork.saw  default.diff  default.new  default.old  default_fips.diff  default_fips.new  default_fips.old  dotprod.cry  dotprod.saw  fix_defer_cleanup.py  flake.nix  module.modulemap  policy.new  policy.old  (+13 more)
bindings/rust-examples/: .gitignore  Cargo.toml
fuzz/: CMakeLists.txt
pq-crypto/: CMakeLists.txt  Makefile  README.md  pq-random.c  pq-random.h  pq-utils.h  pq_random.c  pq_random.h  pq_utils.h  s2n_kyber_512_evp.c  s2n_kyber_512_evp.h  s2n_kyber_evp.c  s2n_kyber_evp.h  s2n_pq.c  s2n_pq.h  s2n_pq_asm.h  s2n_pq_asm.mk  s2n_pq_random.c  s2n_pq_random.h  s2n_pq_utils.h
pq-crypto/bike/: CMakeLists.txt  LICENSE  LICENSE.md  Makefile  README.md  aes.h  aes_ctr_prf.c  aes_ctr_prf.h  bike1_l1_kem.c  bike1_l1_kem.h  bike_defs.h  cleanup.h  conversions.c  conversions.h  converts_portable.c  decode.c  decode.h  defs.h  error.c  error.h  gf2x.h  openssl_utils.c  openssl_utils.h  parallel_hash.c  parallel_hash.h  sampling.c  sampling.h  sampling_portable.c  secure_decode_portable.c  sha.h  sha384.h  types.h  utilities.c  utilities.h
pq-crypto/bike_r1/: Makefile  README.md  aes.h  aes_ctr_prf.c  aes_ctr_prf.h  aes_wrap.h  bike1_l1_r1_kem.c  bike_defs.h  bike_r1_kem.c  bike_r1_kem.h  cleanup.h  converts_portable.c  decode.c  decode.h  defs.h  error.h  functions_renaming.h  gf2x.h  gf2x_internal.h  gf2x_mul.c  gf2x_portable.c  openssl_utils.c  openssl_utils.h  parallel_hash.c  parallel_hash.h  sampling.c  sampling.h  sampling_portable.c  secure_decode_portable.c  sha.h  sha384.h  types.h  utilities.c  utilities.h
pq-crypto/bike_r2/: Makefile  aes_ctr_prf.c  aes_ctr_prf.h  aes_wrap.h  bike_defs.h  bike_r2_kem.c  bike_r2_kem.h  cleanup.h  decode.c  decode.h  defs.h  error.c  error.h  functions_renaming.h  gf2x.h  gf2x_internal.h  gf2x_mul.c  gf2x_portable.c  openssl_utils.c  openssl_utils.h  parallel_hash.c  parallel_hash.h  sampling.c  sampling.h  sampling_portable.c  secure_decode_portable.c  sha.h  types.h  utilities.c  utilities.h
pq-crypto/bike_r3/: Makefile  aes.c  aes.h  aes_ctr_prf.c  aes_ctr_prf.h  bike_defs.h  bike_r3_kem.c  cleanup.h  decode.c  decode.h  decode_avx2.c  decode_avx512.c  decode_internal.h  decode_portable.c  defs.h  error.c  error.h  gf2x.h  gf2x_internal.h  gf2x_inv.c  gf2x_ksqr_avx2.c  gf2x_ksqr_avx512.c  gf2x_ksqr_portable.c  gf2x_mul.c  gf2x_mul_avx2.c  gf2x_mul_avx512.c  gf2x_mul_base_pclmul.c  gf2x_mul_base_portable.c  gf2x_mul_base_vpclmul.c  gf2x_mul_pclmul.c  gf2x_mul_portable.c  measurements.h  rotate_avx2.c  rotate_portable.c  sampling.c  sampling.h  sampling_avx2.c  sampling_avx512.c  sampling_internal.h  sampling_portable.c  (+6 more)
pq-crypto/kyber_90s_r2/: Makefile  aes256ctr.c  aes256ctr.h  aes_c.c  cbd.c  cbd.h  indcpa.c  indcpa.h  kyber_90s_r2_kem.c  kyber_90s_r2_kem.h  kyber_r2_90s_kem.c  kyber_r2_90s_kem.h  ntt.c  ntt.h  params.h  poly.c  poly.h  polyvec.c  polyvec.h  reduce.c  sha2.h  sha2_c.c  symmetric.h  verify.c  verify.h
pq-crypto/kyber_r2/: Makefile  cbd.c  cbd.h  fips202.c  fips202.h  fips202_k.c  fips202_k.h  fips202_kyber_r2.c  fips202_kyber_r2.h  indcpa.c  indcpa.h  kem_kyber.h  kyber_r2_kem.c  kyber_r2_kem.h  ntt.c  ntt.h  poly.c  poly.h  polyvec.c  polyvec.h  reduce.c  reduce.h  sha3.h  sha3_c.c  symmetric-fips202.c  symmetric.h  verify.c  verify.h
pq-crypto/kyber_r2_90s/: Makefile  aes.h  indcpa.h  reduce.h
pq-crypto/kyber_r3/: KeccakP-1600-times4-SIMD256_avx2.c  KeccakP-1600-times4-SnP_avx2.h  KeccakP-align_avx2.h  KeccakP-brg_endian_avx2.h  Makefile  align.h  cbd.c  cbd.h  fips202.c  fips202.h  indcpa.c  indcpa.h  kem.c  kyber512r3_align_avx2.h  kyber512r3_basemul_avx2.S  kyber512r3_cbd.c  kyber512r3_cbd.h  kyber512r3_cbd_avx2.c  kyber512r3_cbd_avx2.h  kyber512r3_cdecl_avx2.h  kyber512r3_consts_avx2.c  kyber512r3_consts_avx2.h  kyber512r3_fips202.c  kyber512r3_fips202.h  kyber512r3_fips202x4_avx2.c  kyber512r3_fips202x4_avx2.h  kyber512r3_fq_avx2.S  kyber512r3_indcpa.c  kyber512r3_indcpa.h  kyber512r3_indcpa_avx2.c  kyber512r3_indcpa_avx2.h  kyber512r3_invntt_avx2.S  kyber512r3_kem.c  kyber512r3_ntt.c  kyber512r3_ntt.h  kyber512r3_ntt_avx2.S  kyber512r3_ntt_avx2.h  kyber512r3_params.h  kyber512r3_poly.c  kyber512r3_poly.h  (+45 more)
pq-crypto/saber/: Makefile  SABER_indcpa.c  SABER_indcpa.h  SABER_params.h  api.h  pack_unpack.c  poly_mul.h  rng.h  verify.c
pq-crypto/saber_saber_r2/: Makefile  Makefile.bk  SABER_indcpa.c  api.h.gch  cbd.c  cbd.h  fips202.c.unused  fips202.h  pack_unpack.c  pack_unpack.h  poly.c  poly.h  poly_mul.c  rng.c  rng.h  saber.h  saber_saber_r2_kem.c  test.c  verify.h
pq-crypto/saber_saber_r3/: Makefile  Makefile.backup  README.md  SABER_indcpa.c  SABER_indcpa.h  SABER_params.h  api.h  cbd.c  cbd.h  fips202.c.unused  fips202.h  kem.c  pack_unpack.c  pack_unpack.h  poly.c  poly.h  poly_mul.c  poly_mul.h  verify.c  verify.h
pq-crypto/sike/: Makefile  P503.c  P503_internal.h  Readme.md  api.h  ec_isogeny.c  fips202.c  fips202.h  fp_generic.c  fpx.c  sidh.c  sike_p503_kem.c  sike_p503_kem.h
pq-crypto/sike_r1/: LICENSE.txt  Makefile  P503_internal_r1.h  P503_r1.c  Readme.md  api.h  api_r1.h  config.h  config_r1.h  ec_isogeny.c  ec_isogeny_r1.c  fips202.c  fips202_r1.c  fips202_r1.h  fp_generic_r1.c  fpx.c  fpx_r1.c  sidh_r1.c  sike_p503_r1_kem.c  sike_p503_r1_kem.h  sike_r1_kem.c  sike_r1_kem.h  sike_r1_namespace.h
pq-crypto/sike_r2/: Makefile  P434.c  P434_api.h  P434_internal.h  config.h  ec_isogeny.c  fips202.c  fips202.h  fp.c  fp_generic.c  fp_x64.c  fp_x64_asm.S  fpx.c  sidh.c  sike_p434_r2.c  sike_p434_r2_api.h  sike_p434_r2_config.h  sike_p434_r2_ec_isogeny.c  sike_p434_r2_fips202.c  sike_p434_r2_fips202.h  sike_p434_r2_fpx.c  (+11 more)
(+8068 files in other folders)
